# models-server

./: .clang-format  .dockerignore  .gitignore  CMakeLists copy.txt  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile_.in  README.md
deploy/: models-server.service
scripts/: test_worker_restart.sh
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/mserver/: AppConfig.hpp  CMakeLists.txt  MasterProcess.cpp  MasterProcess.hpp  main.cpp
src/core/: CMakeLists.txt
src/core/include/grabanzo/mserver/: app.hpp  app_config.hpp  config.hpp  core_config.hpp  logger.hpp  module.hpp  module_base.hpp  route.hpp  thread_pool.hpp  thread_pool_config.hpp  thread_queue.hpp  worker.hpp  worker_http.hpp  worker_http_config.hpp
src/core/src/: app.cpp  app_config.cpp  core_config.cpp  logger.cpp  thread_pool.cpp  thread_pool_config.cpp  worker.cpp  worker_http.cpp  worker_http_config.cpp
src/libs/: CMakeLists.txt
src/libs/core/: CMakeLists.txt
src/libs/core/include/grabanzo/mserver/core/: Logger.hpp  ThreadPool.hpp  ThreadSafeQueue.hpp
src/libs/core/src/: Logger.cpp  ThreadPool.cpp
src/libs/framework/: CMakeLists.txt
src/libs/framework/include/grabanzo/mserver/framework/: IModule.hpp  IRoute.hpp  IService.hpp  ModuleBase.hpp  ModuleRegistry.hpp  RouteContext.hpp  ServiceManager.hpp
src/libs/framework/src/: ModuleRegistry.cpp
src/libs/http/: CMakeLists.txt
src/libs/http/include/grabanzo/mserver/http/: HttpServer.hpp  HttpServerConfig.hpp
src/libs/http/src/: HttpServer.cpp
src/modules/: CMakeLists.txt
src/modules/dummy/: CMakeLists.txt  DummyModule.cpp  DummyModule.hpp  DummyModuleConfig.hpp
src/modules/dummy/include/grabanzo/mserver/modules/dummy/: dummy_module.hpp  dummy_module_config.hpp  dummy_routes.hpp
src/modules/dummy/routes/: DummyRoutes.cpp  DummyRoutes.hpp
src/modules/dummy/services/: DummyServiceImpl.cpp  DummyServiceImpl.hpp  IDummyService.hpp
src/modules/dummy/src/: dummy_module.cpp  dummy_routes.cpp
src/modules/health/: CMakeLists.txt  HealthModule.cpp  HealthModule.hpp
src/modules/health/include/grabanzo/mserver/modules/health/: health_module.hpp  health_module_config.hpp  health_routes.hpp
src/modules/health/routes/: HealthRoutes.cpp  HealthRoutes.hpp
src/modules/health/src/: health_module.cpp  health_routes.cpp
testing/: main  main.cpp
tests/: CMakeLists.txt  test_config.cpp  test_routes.cpp
